--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -39,6 +39,7 @@ button {
   text-align: center;
   padding: 3px 9px;
   margin-top: 30px;
+  margin-bottom: 30px;
   background: none;
   color: $green;
   border: 2px solid $green;
